# napi-demo

./: Cargo.toml  README.md  index.d.ts  index.js  package.json  pnpm-lock.yaml  test.mjs
.github/workflows/: CI.yml
npm/freebsd-x64/: README.md  package.json
src/: lib.rs  test.rs
