[package]
edition = "2021"
name = "napi-demo"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4","async"] }
napi-derive = "2.12.2"
serde = "1"
serde_derive = "1"
serde_json = "1"
tokio = { version = "1.20.0", features = ["full"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
